<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/info_dialog_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="119dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="47dp"
            android:src="@drawable/ic_group" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="123dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_lbl_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:gravity="center_horizontal"
                android:text="@string/do_you_own_a_keyboard"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_lbl_info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_horizontal"
                android:text="@string/keyboard_purchase_hint"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_lbl_info3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_horizontal"
                android:text="@string/otg_support"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ll_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="28dp"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_own"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_cancel_selector"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:text="@string/i_have_one_already"
                android:textAllCaps="false"
                android:textColor="@color/primaryColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_purchase"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/btn_own"
                android:background="@drawable/primary_btn_selector"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:text="@string/purchase_new"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>